--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ h3 {
 p {
   font-size: 16px;
   font-weight: 300;
-  line-height: 29px;
+  line-height: 27px;
   max-width: 725px;
   display: inline-block;
 }
@@ -507,8 +507,6 @@ header {
   background-position: top center;
   background-repeat: no-repeat;
   background-size: 100%;
-  position: relative;
-  z-index: -1;
 }
 .bg_shape {
   position: absolute;
@@ -613,9 +611,9 @@ header {
 }
 .Connecting_area {
   position: relative;
-  padding: 50px 0;
+  padding: 10px 0;
   background-color: #0817a2;
-  z-index: -2;
+  z-index: 1;
 }
 .Connecting_area::after {
   position: absolute;
@@ -629,8 +627,7 @@ header {
 }
 .Connecting_area_top_shape {
   position: absolute;
-  transform: rotateX(180deg);
-  top: -10px;
+  top: -2px;
   width: 100%;
 }
 .Connecting_area_buttom_shape {
@@ -638,9 +635,137 @@ header {
   bottom: -10px;
   width: 100%;
 }
-.Connecting_area_left, .Connecting_area_right{
+.Connecting_area_left,
+.Connecting_area_right {
   padding: 300px 0;
   margin: 50px 0;
+  z-index: 2;
+}
+.Connecting_area_right {
+  position: relative;
+}
+.Connecting_bg_shape1 {
+  position: absolute;
+  top: 53%;
+  right: 60px;
+  z-index: 1;
+}
+.Connecting_bg_shape2 {
+  position: absolute;
+  top: 78%;
+  right: 160px;
+  z-index: 1;
+}
+.Connecting_bg_shape1 img {
+  transform: rotate(400deg);
+}
+.Connecting_bg_shape2 img {
+  transform: rotate(100deg);
+}
+/* Our Services area  */
+
+.service_box {
+  margin: 30px 0;
+  padding: 40px;
+  border-radius: 20px;
+  box-shadow: 0 2px 20px 2px #d7d4dd;
+  text-align: center;
+  transition: 0.4s;
+}
+.service_box:hover {
+  background-color: #0817a2;
+  transform: scale(1.05);
+}
+.service_box:hover > h5 {
+  color: #ffffff;
+}
+.service_box:hover > p {
+  color: rgba(255, 255, 255, 0.71);
+}
+.service_box img {
+  height: 130px;
+  margin-bottom: 50px;
+}
+.service_box p {
+  transition: 0.4s;
+}
+.service_box h5 {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  transition: 0.4s;
+  text-transform: capitalize;
+}
+/* client review area  */
+.client_box {
+  background-color: #0817a2;
+  padding: 60px 40px 40px 40px;
+  border-radius: 20px;
+  position: relative;
+  margin: 50px 0;
+  transition: 0.4s;
+  z-index: -2;
+}
+.client_box::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(121deg, #ffa369 40%, #ff436b 89%);
+  z-index: -1;
+  background-color: red;
+  opacity: 0;
+  transition: 0.4s;
+}
+.client_box:hover:after {
+  opacity: 1;
+}
+.code {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  padding: 20px;
+  border-radius: 50%;
+  background-color: #0817a2;
+  top: -30px;
+  z-index: 1;
+  box-shadow: 0 0px 10px -4px #000000;
+}
+.client_details {
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+}
+.client_img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 20px;
+}
+.client_img img {
+  object-fit: cover;
+}
+.client_name h5 {
+  font-size: 16px;
+  line-height: 13px;
+  margin-top: 10px;
+}
+.client_name p {
+  font-size: 15px;
+}
+.owl-dots {
+  text-align: center;
+  padding-top: 15px;
+  
+}
+.owl-dot{
+  background-color: #000000;
 }
 /*return-to-top START CSS*/
 
