--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ p {
   padding: 13px 30px !important;
   background-color: transparent;
   background-image: linear-gradient(288deg, #ffa369 0%, #ff436b 100%);
-  box-shadow: 0 15px 40px 0 rgb(255 115 106 / 62%);
+  box-shadow: 0 15px 40px -4px rgb(255 115 106 / 62%);
   z-index: 1;
   overflow: hidden;
   position: relative;
@@ -107,7 +107,7 @@ p {
   transform: translate(-50%, -50%) scale(1);
 }
 .btn_a:hover {
-  box-shadow: 0 10px 25px 0 rgb(60 240 255 / 33%);
+  box-shadow: 0 15px 40px -4px rgb(60 240 255 / 33%);
   color: #ffffff;
 }
 body {
@@ -699,6 +699,9 @@ header {
   text-transform: capitalize;
 }
 /* client review area  */
+.happy_clients_area{
+  margin: 30px 0;
+}
 .client_box {
   background-color: #0817a2;
   padding: 60px 40px 40px 40px;
@@ -775,6 +778,57 @@ header {
 }
 .owl-dot.active {
   background: linear-gradient(121deg, #ffa369 40%, #ff436b 89%);
+}
+/* recent articles area  */
+.recent_articles{
+  margin: 90px 0 210px 0;
+}
+.recent_articles_right_box{
+  margin: 20px 0;
+  padding: 12px;
+  border: 2px solid #d8d6d6;
+  border-radius: 15px;
+  transition: .3s;
+}
+.recent_articles_right_box:hover>.recent_articles_right_btn{
+  visibility: visible;
+  opacity: 1;
+}
+.recent_articles_right_box .recent_articles_right_img img {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+  border-radius: 15px;
+  transition: .3s;
+}
+.recent_articles_right_box .recent_articles_right_img img:hover {
+  filter: brightness(.7);
+}
+.article_date a{
+  color: #8f8e8e;
+  font-size: 15px;
+  font-weight: 400;
+  transition: .3s;
+}
+.article_date a:hover{
+  color: #000000;
+}
+.article_title a{
+  color: #000000;
+  transition: .3s;
+}
+.article_title a:hover{
+  color: #0817a2;
+}
+.recent_articles_right_box p{
+  overflow: hidden; 
+  width: 100%; 
+  max-height: 80px; 
+}
+.recent_articles_right_btn{
+  margin: 10px 0;
+  opacity: 0;
+  transform: .3s;
 }
 /* footer area */
 .footer_area {
